inline script evals

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <!-- <script type="text/javascript" src="/scripts/combined.min.js"></script> -->
 <script type="text/javascript" src="/scripts/showdown.js"></script>
 <script type="text/javascript" src="/scripts/autoresize.jquery.js"></script>
-<script type="text/javascript" src="/scripts/main.js"></script>
 <script type="text/javascript" src="/scripts/nsdoc.js"></script>
+<script type="text/javascript" src="/scripts/main.js"></script>
 
 <script type="text/javascript">
-  $(document).ready(namespace.com.pageforest.wiki.onReady);
+  $(document).ready(namespace.com.pageforest.nsdoc.onReady);
 </script>
 
 </head>
